# nano-vectordb

./: .gitignore  .gitmodules  CMakeLists.txt  Performance.md  Performance_CUDA.md  Performance_summary.md  README.md  REPRO.md  requirements.txt
apps/: nvdb_bench.cpp  nvdb_cuda_sanity.cu  nvdb_dump.cpp  nvdb_gt_build.cpp  nvdb_hnsw_build.cpp  nvdb_hnsw_eval.cpp  nvdb_hnsw_search.cpp  nvdb_ivf_build.cpp  nvdb_ivf_eval.cpp  nvdb_ivfpq_build.cpp  nvdb_quantize_i8.cpp  nvdb_sanity.cpp  nvdb_search.cpp
include/nvdb/: cuda_refine.h  f16_scalar.h  flat_index.h  flat_index_async.h  flat_index_omp.h  flat_index_pool.h  gtbin_format.h  mmap_file.h  score_dispatch.h  simd_dot.h  to_f32_row.h  topK.h  vecbin_format.h  vector_dataset.h
scripts/: build_vecbin_chunked.py
src/: cuda_refine.cu  flat_index.cpp  flat_index_async.cpp  flat_index_omp.cpp  flat_index_pool.cpp  mmap_file.cpp  simd_dot.cpp  vector_dataset.cpp
tools/: nvdb_convert_f16.cpp  nvdb_make_query.cpp  nvdb_slice.cpp
